2008-04-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_constants.c: define dummy
	rb_cairo_ps_level_from_ruby_object() just for creating cairo.lib.

	* extconf.rb: substitute DLLIB not TARGET.

	* pkg-config.rb: fix substitution for MSVC.

	* extconf.rb: support output option for MSVC.

	* src/rb_cairo_path.c: remove garbages.

	* extconf.rb: fix object file extension substitution.

	* pkg-config.rb: detect MSVC environment.

	* pkg-config.rb: handle DL error.

2008-04-03  Kouhei Sutou  <kou@cozmixng.org>

	* pkg-config.rb, test/test_pkg_config.rb: support
	--with-override-variables extconf.rb option.

2008-04-01  Kouhei Sutou  <kou@cozmixng.org>

	* samples/text2.rb: don't use block variable assignment.

	* src/depend (install-so): use -run instead of ftools.

2008-03-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c: added missing HAVE_RUBY_COCOA check.
	Thanks to OBATA Akio!!!
	* README: added OBATA Akio to the thanks list.

2008-03-25  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_initialize): fixed style.

2008-03-04  Kouhei Sutou  <kou@cozmixng.org>

	* pkg-config.rb: supported building with ruby 1.9.1.

2008-03-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c, src/cairo.def: Cairo::QuartzImageSurface
	will work.

	* src/rb_cairo_surface.c: supported <= 1.5.12.

	* pkg-config.rb: searched default path too.

2008-02-24  Kouhei Sutou  <kou@cozmixng.org>

	* pkg-config.rb: implemented --cflags-only-I.
	* test/: added.

	* src/rb_cairo_surface.c: worked with cairo >= 1.2.0.

	* src/rb_cairo_context.c: fixed declaration position.

	* extconf.rb: RUBY_ -> RB_.

	* pkg-config.rb: implemented pkg-config for cross compiling with Wine.

2008-02-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/cairo.def, src/rb_cairo.h, src/rb_cairo_surface.c:
	Cairo::Win32PrintingSurface will work.

	* src/: supported <= 1.5.10.

2008-01-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c: used rbobj_to_nsobj() and